@startuml

package presentationLayer {
	PresentationController -- UserInput: uses
	PresentationController -- UserOutput: uses
	UserInput -- UserOutput: uses
	PresentationController -- Menu: uses
}

package businessLayer {
	
	package businessLayer.entity as entity {
		
		class EntityUtils
		
		class Supplier {
			ppn: int
			bankNumber: int
			name: string
			isDelivering: boolean
			paymentCondition: PaymentCondition
			regularSupplyingDay: Weekday?
		}
		
		class Contact {
			name: string
			email: string
			phoneNumber: string
		}
		
		class Order {
			ordered: LocalDate
			provided: LocalDate
			totalPrice: float
		}
		
		class Item {
			catalogNumber: int
			name: string
			category: string
			price: float
		}
		
		class QuantityDiscount {
			quantity: int
			discount: float
		}
		
		Supplier "1" *-- "1" Contact: "contacted via"
		
		QuantityDiscount "*" --* "1" Item: "is for"
		
		<>   item_order_link_node
		Item "*" o--  item_order_link_node: ordering
		item_order_link_node  --o "*" Order: ordering
		note left of item_order_link_node: "quantity: int"
		
		Supplier "1" -- "*" Item: supplied
	}
	
	package businessLayer.controller as ctrl {
		class SupplierController {
		
		}
		
		class OrderController {
		
		}
		
		class ItemController {
		
		}
		
		SupplierController *-- Supplier
		ItemController *-- Item
		OrderController *-- Order
	}
	
	package businessLayer.service {
		class Service
		
		Service "1" -- "1" SupplierController
		Service "1" -- "1" OrderController
		Service "1" -- "1" ItemController
	}
	
	ctrl --[hidden]-> entity
}

	PresentationController -- Service: uses
	Service -[hidden]-> presentationLayer
@enduml